// See Makefile for the logic that generates this
// Protoc errors imply this file is being generated incorrectly
// Swift compile errors are probably bugs in protoc-gen-swift
syntax = "proto3";
package swift_proto_testing.generated;
enum GeneratedSwiftReservedEnum {
  NONE = 0;
  addPath = 1;
  adjusted = 2;
  aggregateValue = 3;
  allCases = 4;
  allowAlias = 5;
  alwaysPrintEnumsAsInts = 6;
  alwaysPrintInt64sAsNumbers = 7;
  annotation = 8;
  any = 9;
  AnyExtensionField = 10;
  AnyMessageExtension = 11;
  AnyMessageStorage = 12;
  AnyUnpackError = 13;
  append = 14;
  appendCurrent = 15;
  appended = 16;
  appendUIntHex = 17;
  appendUnknown = 18;
  areAllInitialized = 19;
  Array = 20;
  arrayDepth = 21;
  arrayLiteral = 22;
  arraySeparator = 23;
  as = 24;
  asciiOpenCurlyBracket = 25;
  asciiZero = 26;
  async = 27;
  AsyncIterator = 28;
  AsyncIteratorProtocol = 29;
  AsyncMessageSequence = 30;
  available = 31;
  b = 32;
  Base = 33;
  base64Values = 34;
  baseAddress = 35;
  BaseType = 36;
  begin = 37;
  binary = 38;
  BinaryDecoder = 39;
  BinaryDecoding = 40;
  BinaryDecodingError = 41;
  BinaryDecodingOptions = 42;
  BinaryDelimited = 43;
  BinaryEncoder = 44;
  BinaryEncodingError = 45;
  BinaryEncodingMessageSetSizeVisitor = 46;
  BinaryEncodingMessageSetVisitor = 47;
  BinaryEncodingOptions = 48;
  BinaryEncodingSizeVisitor = 49;
  BinaryEncodingVisitor = 50;
  binaryOptions = 51;
  binaryProtobufDelimitedMessages = 52;
  BinaryStreamDecoding = 53;
  binaryStreamDecodingError = 54;
  bitPattern = 55;
  body = 56;
  Bool = 57;
  booleanLiteral = 58;
  BooleanLiteralType = 59;
  boolValue = 60;
  buffer = 61;
  byte = 62;
  bytecode = 63;
  BytecodeReader = 64;
  bytes = 65;
  bytesInGroup = 66;
  bytesNeeded = 67;
  bytesRead = 68;
  c = 69;
  canonical = 70;
  capitalizeNext = 71;
  cardinality = 72;
  CaseIterable = 73;
  castedValue = 74;
  ccEnableArenas = 75;
  ccGenericServices = 76;
  Character = 77;
  chars = 78;
  checkProgramFormat = 79;
  chunk = 80;
  class = 81;
  clearAggregateValue = 82;
  clearAllowAlias = 83;
  clearBegin = 84;
  clearCcEnableArenas = 85;
  clearCcGenericServices = 86;
  clearClientStreaming = 87;
  clearCsharpNamespace = 88;
  clearCtype = 89;
  clearDebugRedact = 90;
  clearDefaultSymbolVisibility = 91;
  clearDefaultValue = 92;
  clearDeprecated = 93;
  clearDeprecatedLegacyJsonFieldConflicts = 94;
  clearDeprecationWarning = 95;
  clearDoubleValue = 96;
  clearEdition = 97;
  clearEditionDeprecated = 98;
  clearEditionIntroduced = 99;
  clearEditionRemoved = 100;
  clearEnd = 101;
  clearEnforceNamingStyle = 102;
  clearEnumType = 103;
  clearExtendee = 104;
  clearExtensionValue = 105;
  clearFeatures = 106;
  clearFeatureSupport = 107;
  clearFieldPresence = 108;
  clearFixedFeatures = 109;
  clearFullName = 110;
  clearGoPackage = 111;
  clearIdempotencyLevel = 112;
  clearIdentifierValue = 113;
  clearInputType = 114;
  clearIsExtension = 115;
  clearJavaGenerateEqualsAndHash = 116;
  clearJavaGenericServices = 117;
  clearJavaMultipleFiles = 118;
  clearJavaOuterClassname = 119;
  clearJavaPackage = 120;
  clearJavaStringCheckUtf8 = 121;
  clearJsonFormat = 122;
  clearJsonName = 123;
  clearJstype = 124;
  clearLabel = 125;
  clearLazy = 126;
  clearLeadingComments = 127;
  clearMapEntry = 128;
  clearMaximumEdition = 129;
  clearMessageEncoding = 130;
  clearMessageSetWireFormat = 131;
  clearMinimumEdition = 132;
  clearName = 133;
  clearNamePart = 134;
  clearNegativeIntValue = 135;
  clearNoStandardDescriptorAccessor = 136;
  clearNumber = 137;
  clearObjcClassPrefix = 138;
  clearOneofIndex = 139;
  clearOptimizeFor = 140;
  clearOptions = 141;
  clearOutputType = 142;
  clearOverridableFeatures = 143;
  clearPackage = 144;
  clearPacked = 145;
  clearPhpClassPrefix = 146;
  clearPhpMetadataNamespace = 147;
  clearPhpNamespace = 148;
  clearPositiveIntValue = 149;
  clearProto3Optional = 150;
  clearPyGenericServices = 151;
  clearRemovalError = 152;
  clearRepeated = 153;
  clearRepeatedFieldEncoding = 154;
  clearReserved = 155;
  clearRetention = 156;
  clearRubyPackage = 157;
  clearSemantic = 158;
  clearServerStreaming = 159;
  clearSourceCodeInfo = 160;
  clearSourceContext = 161;
  clearSourceFile = 162;
  clearStart = 163;
  clearStringValue = 164;
  clearSwiftPrefix = 165;
  clearSyntax = 166;
  clearTrailingComments = 167;
  clearType = 168;
  clearTypeName = 169;
  clearUnverifiedLazy = 170;
  clearUtf8Validation = 171;
  clearValue = 172;
  clearVerification = 173;
  clearVisibility = 174;
  clearWeak = 175;
  clientStreaming = 176;
  code = 177;
  codePoint = 178;
  codeUnits = 179;
  Collection = 180;
  collector = 181;
  comma = 182;
  complexName = 183;
  consumedBytes = 184;
  contains = 185;
  contentsOf = 186;
  ContiguousBytes = 187;
  copy = 188;
  count = 189;
  countVarintsInBuffer = 190;
  csharpNamespace = 191;
  ctype = 192;
  customCodable = 193;
  CustomDebugStringConvertible = 194;
  CustomStringConvertible = 195;
  D = 196;
  Data = 197;
  dataResult = 198;
  date = 199;
  daySec = 200;
  daysSinceEpoch = 201;
  debugDescription = 202;
  debugRedact = 203;
  declaration = 204;
  decoded = 205;
  decodedFromJSONNull = 206;
  decodeExtensionField = 207;
  decodeExtensionFieldsAsMessageSet = 208;
  decodeJSON = 209;
  decodeMapField = 210;
  decodeMessage = 211;
  Decoder = 212;
  decodeRepeated = 213;
  decodeRepeatedBoolField = 214;
  decodeRepeatedBytesField = 215;
  decodeRepeatedDoubleField = 216;
  decodeRepeatedEnumField = 217;
  decodeRepeatedFixed32Field = 218;
  decodeRepeatedFixed64Field = 219;
  decodeRepeatedFloatField = 220;
  decodeRepeatedGroupField = 221;
  decodeRepeatedInt32Field = 222;
  decodeRepeatedInt64Field = 223;
  decodeRepeatedMessageField = 224;
  decodeRepeatedSFixed32Field = 225;
  decodeRepeatedSFixed64Field = 226;
  decodeRepeatedSInt32Field = 227;
  decodeRepeatedSInt64Field = 228;
  decodeRepeatedStringField = 229;
  decodeRepeatedUInt32Field = 230;
  decodeRepeatedUInt64Field = 231;
  decodeSingular = 232;
  decodeSingularBoolField = 233;
  decodeSingularBytesField = 234;
  decodeSingularDoubleField = 235;
  decodeSingularEnumField = 236;
  decodeSingularFixed32Field = 237;
  decodeSingularFixed64Field = 238;
  decodeSingularFloatField = 239;
  decodeSingularGroupField = 240;
  decodeSingularInt32Field = 241;
  decodeSingularInt64Field = 242;
  decodeSingularMessageField = 243;
  decodeSingularSFixed32Field = 244;
  decodeSingularSFixed64Field = 245;
  decodeSingularSInt32Field = 246;
  decodeSingularSInt64Field = 247;
  decodeSingularStringField = 248;
  decodeSingularUInt32Field = 249;
  decodeSingularUInt64Field = 250;
  decodeTextFormat = 251;
  defaultAnyTypeURLPrefix = 252;
  defaults = 253;
  defaultSymbolVisibility = 254;
  defaultValue = 255;
  dependency = 256;
  deprecated = 257;
  deprecatedLegacyJsonFieldConflicts = 258;
  deprecationWarning = 259;
  description = 260;
  Dictionary = 261;
  dictionaryLiteral = 262;
  digit = 263;
  digit0 = 264;
  digit1 = 265;
  digitCount = 266;
  digits = 267;
  digitValue = 268;
  discardableResult = 269;
  discardUnknownFields = 270;
  Double = 271;
  doubleValue = 272;
  duration = 273;
  E = 274;
  edition = 275;
  EditionDefault = 276;
  editionDefaults = 277;
  editionDeprecated = 278;
  editionIntroduced = 279;
  editionRemoved = 280;
  Element = 281;
  elements = 282;
  else = 283;
  emitExtensionFieldName = 284;
  emitFieldName = 285;
  emitFieldNumber = 286;
  emptyAnyTypeURL = 287;
  emptyData = 288;
  encodeAsBytes = 289;
  encoded = 290;
  encodedJSONString = 291;
  encodedSize = 292;
  encodeField = 293;
  encoder = 294;
  end = 295;
  endArray = 296;
  endMessageField = 297;
  endObject = 298;
  endRegularField = 299;
  enforceNamingStyle = 300;
  enum = 301;
  EnumReservedRange = 302;
  enumType = 303;
  enumvalue = 304;
  Equatable = 305;
  Error = 306;
  execute = 307;
  ExpressibleByArrayLiteral = 308;
  ExpressibleByDictionaryLiteral = 309;
  ext = 310;
  extDecoder = 311;
  extendedGraphemeClusterLiteral = 312;
  ExtendedGraphemeClusterLiteralType = 313;
  extendee = 314;
  ExtensibleMessage = 315;
  extension = 316;
  ExtensionField = 317;
  extensionFieldNumber = 318;
  ExtensionFieldValueSet = 319;
  ExtensionMap = 320;
  extensionRange = 321;
  extensions = 322;
  extras = 323;
  F = 324;
  false = 325;
  features = 326;
  FeatureSetEditionDefault = 327;
  featureSupport = 328;
  field = 329;
  fieldData = 330;
  FieldMaskError = 331;
  fieldName = 332;
  fieldNameCount = 333;
  fieldNum = 334;
  fieldNumber = 335;
  fieldNumberForProto = 336;
  fieldPresence = 337;
  fields = 338;
  fieldSize = 339;
  FieldTag = 340;
  FieldType = 341;
  file = 342;
  fileName = 343;
  filter = 344;
  final = 345;
  finiteOnly = 346;
  first = 347;
  firstItem = 348;
  fixedFeatures = 349;
  Float = 350;
  floatLiteral = 351;
  FloatLiteralType = 352;
  for = 353;
  forMessageName = 354;
  formUnion = 355;
  forReadingFrom = 356;
  forTypeURL = 357;
  ForwardParser = 358;
  forWritingInto = 359;
  from = 360;
  fromAscii2 = 361;
  fromAscii4 = 362;
  fromByteOffset = 363;
  fromHexDigit = 364;
  fullName = 365;
  func = 366;
  function = 367;
  G = 368;
  get = 369;
  getExtensionValue = 370;
  Google_Protobuf_Any = 371;
  Google_Protobuf_Api = 372;
  Google_Protobuf_BoolValue = 373;
  Google_Protobuf_BytesValue = 374;
  Google_Protobuf_DescriptorProto = 375;
  Google_Protobuf_DoubleValue = 376;
  Google_Protobuf_Duration = 377;
  Google_Protobuf_Edition = 378;
  Google_Protobuf_Empty = 379;
  Google_Protobuf_Enum = 380;
  Google_Protobuf_EnumDescriptorProto = 381;
  Google_Protobuf_EnumOptions = 382;
  Google_Protobuf_EnumValue = 383;
  Google_Protobuf_EnumValueDescriptorProto = 384;
  Google_Protobuf_EnumValueOptions = 385;
  Google_Protobuf_ExtensionRangeOptions = 386;
  Google_Protobuf_FeatureSet = 387;
  Google_Protobuf_FeatureSetDefaults = 388;
  Google_Protobuf_Field = 389;
  Google_Protobuf_FieldDescriptorProto = 390;
  Google_Protobuf_FieldMask = 391;
  Google_Protobuf_FieldOptions = 392;
  Google_Protobuf_FileDescriptorProto = 393;
  Google_Protobuf_FileDescriptorSet = 394;
  Google_Protobuf_FileOptions = 395;
  Google_Protobuf_FloatValue = 396;
  Google_Protobuf_GeneratedCodeInfo = 397;
  Google_Protobuf_Int32Value = 398;
  Google_Protobuf_Int64Value = 399;
  Google_Protobuf_ListValue = 400;
  Google_Protobuf_MessageOptions = 401;
  Google_Protobuf_Method = 402;
  Google_Protobuf_MethodDescriptorProto = 403;
  Google_Protobuf_MethodOptions = 404;
  Google_Protobuf_Mixin = 405;
  Google_Protobuf_NullValue = 406;
  Google_Protobuf_OneofDescriptorProto = 407;
  Google_Protobuf_OneofOptions = 408;
  Google_Protobuf_Option = 409;
  Google_Protobuf_ServiceDescriptorProto = 410;
  Google_Protobuf_ServiceOptions = 411;
  Google_Protobuf_SourceCodeInfo = 412;
  Google_Protobuf_SourceContext = 413;
  Google_Protobuf_StringValue = 414;
  Google_Protobuf_Struct = 415;
  Google_Protobuf_SymbolVisibility = 416;
  Google_Protobuf_Syntax = 417;
  Google_Protobuf_Timestamp = 418;
  Google_Protobuf_Type = 419;
  Google_Protobuf_UInt32Value = 420;
  Google_Protobuf_UInt64Value = 421;
  Google_Protobuf_UninterpretedOption = 422;
  Google_Protobuf_Value = 423;
  goPackage = 424;
  gotData = 425;
  group = 426;
  groupFieldNumberStack = 427;
  groupSize = 428;
  guard = 429;
  hadOneofValue = 430;
  handleConflictingOneOf = 431;
  handleInstruction = 432;
  hasAggregateValue = 433;
  hasAllowAlias = 434;
  hasBegin = 435;
  hasCcEnableArenas = 436;
  hasCcGenericServices = 437;
  hasClientStreaming = 438;
  hasCsharpNamespace = 439;
  hasCtype = 440;
  hasData = 441;
  hasDebugRedact = 442;
  hasDefaultSymbolVisibility = 443;
  hasDefaultValue = 444;
  hasDeprecated = 445;
  hasDeprecatedLegacyJsonFieldConflicts = 446;
  hasDeprecationWarning = 447;
  hasDoubleValue = 448;
  hasEdition = 449;
  hasEditionDeprecated = 450;
  hasEditionIntroduced = 451;
  hasEditionRemoved = 452;
  hasEnd = 453;
  hasEnforceNamingStyle = 454;
  hasEnumType = 455;
  hasExplicitDelta = 456;
  hasExtendee = 457;
  hasExtensionValue = 458;
  hasFeatures = 459;
  hasFeatureSupport = 460;
  hasFieldPresence = 461;
  hasFixedFeatures = 462;
  hasFullName = 463;
  hasGoPackage = 464;
  hash = 465;
  Hashable = 466;
  hasher = 467;
  HashVisitor = 468;
  hasIdempotencyLevel = 469;
  hasIdentifierValue = 470;
  hasInputType = 471;
  hasIsExtension = 472;
  hasJavaGenerateEqualsAndHash = 473;
  hasJavaGenericServices = 474;
  hasJavaMultipleFiles = 475;
  hasJavaOuterClassname = 476;
  hasJavaPackage = 477;
  hasJavaStringCheckUtf8 = 478;
  hasJsonFormat = 479;
  hasJsonName = 480;
  hasJstype = 481;
  hasLabel = 482;
  hasLazy = 483;
  hasLeadingComments = 484;
  hasMapEntry = 485;
  hasMaximumEdition = 486;
  hasMessageEncoding = 487;
  hasMessageSetWireFormat = 488;
  hasMinimumEdition = 489;
  hasName = 490;
  hasNamePart = 491;
  hasNegativeIntValue = 492;
  hasNoStandardDescriptorAccessor = 493;
  hasNumber = 494;
  hasObjcClassPrefix = 495;
  hasOneofIndex = 496;
  hasOptimizeFor = 497;
  hasOptions = 498;
  hasOutputType = 499;
  hasOverridableFeatures = 500;
  hasPackage = 501;
  hasPacked = 502;
  hasPhpClassPrefix = 503;
  hasPhpMetadataNamespace = 504;
  hasPhpNamespace = 505;
  hasPositiveIntValue = 506;
  hasProto3Optional = 507;
  hasPyGenericServices = 508;
  hasRemovalError = 509;
  hasRepeated = 510;
  hasRepeatedFieldEncoding = 511;
  hasReserved = 512;
  hasRetention = 513;
  hasRubyPackage = 514;
  hasSemantic = 515;
  hasServerStreaming = 516;
  hasSourceCodeInfo = 517;
  hasSourceContext = 518;
  hasSourceFile = 519;
  hasStart = 520;
  hasStringValue = 521;
  hasSwiftPrefix = 522;
  hasSyntax = 523;
  hasTrailingComments = 524;
  hasType = 525;
  hasTypeName = 526;
  hasUnverifiedLazy = 527;
  hasUtf8Validation = 528;
  hasValue = 529;
  hasVerification = 530;
  hasVisibility = 531;
  hasWeak = 532;
  hour = 533;
  i = 534;
  idempotencyLevel = 535;
  identifierValue = 536;
  if = 537;
  ignoreUnknownExtensionFields = 538;
  ignoreUnknownFields = 539;
  index = 540;
  init = 541;
  inout = 542;
  inputType = 543;
  insert = 544;
  Instruction = 545;
  Int = 546;
  Int32 = 547;
  Int64 = 548;
  Int8 = 549;
  integerLiteral = 550;
  IntegerLiteralType = 551;
  intern = 552;
  Internal = 553;
  InternalState = 554;
  intersect = 555;
  into = 556;
  ints = 557;
  invalidAnyTypeURL = 558;
  isA = 559;
  isEqual = 560;
  isEqualTo = 561;
  isExtension = 562;
  isInitialized = 563;
  isNegative = 564;
  isPathValid = 565;
  isReserved = 566;
  isValid = 567;
  isValidHexDigit = 568;
  itemTagsEncodedSize = 569;
  iterator = 570;
  javaGenerateEqualsAndHash = 571;
  javaGenericServices = 572;
  javaMultipleFiles = 573;
  javaOuterClassname = 574;
  javaPackage = 575;
  javaStringCheckUtf8 = 576;
  JSONDecoder = 577;
  JSONDecoding = 578;
  JSONDecodingError = 579;
  JSONDecodingOptions = 580;
  jsonEncoder = 581;
  JSONEncoding = 582;
  JSONEncodingError = 583;
  JSONEncodingOptions = 584;
  JSONEncodingVisitor = 585;
  jsonFormat = 586;
  JSONMapEncodingVisitor = 587;
  jsonName = 588;
  jsonPath = 589;
  jsonPaths = 590;
  JSONScanner = 591;
  jsonString = 592;
  jsonText = 593;
  jsonUTF8Bytes = 594;
  jsonUTF8Data = 595;
  jstype = 596;
  k = 597;
  kChunkSize = 598;
  Key = 599;
  keyField = 600;
  keyFieldOpt = 601;
  KeyType = 602;
  kind = 603;
  l = 604;
  label = 605;
  lazy = 606;
  leadingComments = 607;
  leadingDetachedComments = 608;
  length = 609;
  lessThan = 610;
  let = 611;
  lhs = 612;
  line = 613;
  list = 614;
  listOfMessages = 615;
  listValue = 616;
  littleEndian = 617;
  load = 618;
  localHasher = 619;
  location = 620;
  M = 621;
  major = 622;
  makeAsyncIterator = 623;
  makeIterator = 624;
  malformedLength = 625;
  mapEntry = 626;
  MapKeyType = 627;
  mapToMessages = 628;
  MapValueType = 629;
  mapVisitor = 630;
  mask = 631;
  maximumEdition = 632;
  mdayStart = 633;
  merge = 634;
  MergeOptions = 635;
  message = 636;
  messageDepthLimit = 637;
  messageEncoding = 638;
  MessageExtension = 639;
  MessageImplementationBase = 640;
  MessageSet = 641;
  messageSetWireFormat = 642;
  messageSize = 643;
  messageType = 644;
  method = 645;
  methods = 646;
  min = 647;
  minimumEdition = 648;
  minor = 649;
  mixins = 650;
  modify = 651;
  month = 652;
  msgExtension = 653;
  mutating = 654;
  n = 655;
  name = 656;
  NameDescription = 657;
  NameMap = 658;
  NamePart = 659;
  names = 660;
  nanos = 661;
  negativeIntValue = 662;
  nestedType = 663;
  newExtensible = 664;
  newL = 665;
  newList = 666;
  newMessage = 667;
  newValue = 668;
  next = 669;
  nextByte = 670;
  nextFieldNumber = 671;
  nextInstruction = 672;
  nextInt32 = 673;
  nextNullTerminatedString = 674;
  nextNullTerminatedStringArray = 675;
  nextNumber = 676;
  nextUInt64 = 677;
  nextVarInt = 678;
  nil = 679;
  nilLiteral = 680;
  noBytesAvailable = 681;
  noStandardDescriptorAccessor = 682;
  nullValue = 683;
  number = 684;
  numberValue = 685;
  objcClassPrefix = 686;
  of = 687;
  OneOf_Kind = 688;
  oneofDecl = 689;
  oneofIndex = 690;
  oneofs = 691;
  optimizeFor = 692;
  OptimizeMode = 693;
  OptionalEnumExtensionField = 694;
  OptionalExtensionField = 695;
  OptionalGroupExtensionField = 696;
  OptionalMessageExtensionField = 697;
  optionDependency = 698;
  OptionRetention = 699;
  options = 700;
  OptionTargetType = 701;
  other = 702;
  others = 703;
  out = 704;
  outputType = 705;
  overridableFeatures = 706;
  p = 707;
  package = 708;
  packed = 709;
  PackedEnumExtensionField = 710;
  PackedExtensionField = 711;
  padding = 712;
  parent = 713;
  parse = 714;
  partial = 715;
  path = 716;
  PathDecoder = 717;
  PathDecodingError = 718;
  paths = 719;
  PathVisitor = 720;
  payload = 721;
  payloadSize = 722;
  phpClassPrefix = 723;
  phpMetadataNamespace = 724;
  phpNamespace = 725;
  pos = 726;
  positiveIntValue = 727;
  prefix = 728;
  preserveProtoFieldNames = 729;
  preTraverse = 730;
  previousNumber = 731;
  prevPath = 732;
  printUnknownFields = 733;
  programBuffer = 734;
  programFormat = 735;
  proto2 = 736;
  proto3DefaultValue = 737;
  proto3Optional = 738;
  protobuf_extensionFieldValues = 739;
  protobuf_fieldNumber = 740;
  protobuf_generated_isEqualTo = 741;
  protobuf_nameMap = 742;
  protobuf_newField = 743;
  protobuf_package = 744;
  ProtobufAPIVersion_2 = 745;
  ProtobufAPIVersionCheck = 746;
  ProtobufBool = 747;
  ProtobufBytes = 748;
  protobufData = 749;
  ProtobufDouble = 750;
  ProtobufEnumMap = 751;
  protobufExtension = 752;
  ProtobufFixed32 = 753;
  ProtobufFixed64 = 754;
  ProtobufFloat = 755;
  ProtobufInt32 = 756;
  ProtobufInt64 = 757;
  ProtobufMap = 758;
  ProtobufMessageMap = 759;
  ProtobufSFixed32 = 760;
  ProtobufSFixed64 = 761;
  ProtobufSInt32 = 762;
  ProtobufSInt64 = 763;
  ProtobufString = 764;
  ProtobufUInt32 = 765;
  ProtobufUInt64 = 766;
  protocol = 767;
  protoFieldName = 768;
  protoMessageName = 769;
  ProtoNameProviding = 770;
  protoPaths = 771;
  public = 772;
  publicDependency = 773;
  putBoolValue = 774;
  putBytesValue = 775;
  putDoubleValue = 776;
  putEnumValue = 777;
  putFixedUInt32 = 778;
  putFixedUInt64 = 779;
  putFloatValue = 780;
  putInt64 = 781;
  putStringValue = 782;
  putUInt64 = 783;
  putUInt64Hex = 784;
  putVarInt = 785;
  putZigZagVarInt = 786;
  pyGenericServices = 787;
  R = 788;
  rawChars = 789;
  RawRepresentable = 790;
  RawValue = 791;
  read4HexDigits = 792;
  readBytes = 793;
  reader = 794;
  register = 795;
  remainingProgram = 796;
  removalError = 797;
  removingAllFieldsOf = 798;
  repeated = 799;
  RepeatedEnumExtensionField = 800;
  RepeatedExtensionField = 801;
  repeatedFieldEncoding = 802;
  RepeatedGroupExtensionField = 803;
  RepeatedMessageExtensionField = 804;
  repeating = 805;
  replaceRepeatedFields = 806;
  requestStreaming = 807;
  requestTypeURL = 808;
  requiredSize = 809;
  responseStreaming = 810;
  responseTypeURL = 811;
  result = 812;
  retention = 813;
  rethrows = 814;
  ReturnType = 815;
  revision = 816;
  rhs = 817;
  root = 818;
  rubyPackage = 819;
  s = 820;
  sawBackslash = 821;
  sawPercentEncoding = 822;
  sawSection4Characters = 823;
  sawSection5Characters = 824;
  Scalar = 825;
  scan = 826;
  scanner = 827;
  seconds = 828;
  self = 829;
  semantic = 830;
  Sendable = 831;
  separator = 832;
  serialize = 833;
  serializedBytes = 834;
  serializedData = 835;
  serializedSize = 836;
  serverStreaming = 837;
  service = 838;
  set = 839;
  setExtensionValue = 840;
  shift = 841;
  SimpleExtensionMap = 842;
  size = 843;
  sizer = 844;
  source = 845;
  sourceCodeInfo = 846;
  sourceContext = 847;
  sourceEncoding = 848;
  sourceFile = 849;
  SourceLocation = 850;
  span = 851;
  split = 852;
  start = 853;
  startArray = 854;
  startArrayObject = 855;
  startField = 856;
  startIndex = 857;
  startMessageField = 858;
  startObject = 859;
  startRegularField = 860;
  state = 861;
  static = 862;
  StaticString = 863;
  storage = 864;
  String = 865;
  stringLiteral = 866;
  StringLiteralType = 867;
  stringResult = 868;
  stringValue = 869;
  struct = 870;
  structValue = 871;
  subDecoder = 872;
  subscript = 873;
  subtract = 874;
  subVisitor = 875;
  Swift = 876;
  swiftPrefix = 877;
  SwiftProtobufContiguousBytes = 878;
  SwiftProtobufError = 879;
  syntax = 880;
  T = 881;
  tag = 882;
  targets = 883;
  terminator = 884;
  testDecoder = 885;
  text = 886;
  textDecoder = 887;
  TextFormatDecoder = 888;
  TextFormatDecodingError = 889;
  TextFormatDecodingOptions = 890;
  TextFormatEncodingOptions = 891;
  TextFormatEncodingVisitor = 892;
  textFormatString = 893;
  throwOrIgnore = 894;
  throws = 895;
  timeInterval = 896;
  timeIntervalSince1970 = 897;
  timeIntervalSinceReferenceDate = 898;
  tmp = 899;
  tooLarge = 900;
  total = 901;
  totalArrayDepth = 902;
  totalSize = 903;
  trailingComments = 904;
  traverse = 905;
  trim = 906;
  true = 907;
  try = 908;
  type = 909;
  typealias = 910;
  TypeEnum = 911;
  typeName = 912;
  typePrefix = 913;
  typeStart = 914;
  typeUnknown = 915;
  typeURL = 916;
  UInt32 = 917;
  UInt64 = 918;
  UInt8 = 919;
  unchecked = 920;
  Unicode = 921;
  unicodeScalarLiteral = 922;
  UnicodeScalarLiteralType = 923;
  unicodeScalars = 924;
  UnicodeScalarView = 925;
  uninterpretedOption = 926;
  union = 927;
  uniqueStorage = 928;
  unknown = 929;
  unknownFields = 930;
  UnknownStorage = 931;
  unpackTo = 932;
  UnsafeBufferPointer = 933;
  UnsafeMutablePointer = 934;
  UnsafeMutableRawBufferPointer = 935;
  UnsafeRawBufferPointer = 936;
  UnsafeRawPointer = 937;
  unverifiedLazy = 938;
  updatedOptions = 939;
  uppercasedAssumingASCII = 940;
  url = 941;
  useDeterministicOrdering = 942;
  utf8 = 943;
  utf8Ptr = 944;
  utf8ToDouble = 945;
  utf8Validation = 946;
  UTF8View = 947;
  V = 948;
  value = 949;
  valueField = 950;
  values = 951;
  ValueType = 952;
  var = 953;
  verification = 954;
  VerificationState = 955;
  version = 956;
  versionString = 957;
  visibility = 958;
  VisibilityFeature = 959;
  visitExtensionFields = 960;
  visitExtensionFieldsAsMessageSet = 961;
  visitMapField = 962;
  Visitor = 963;
  visitPacked = 964;
  visitPackedBoolField = 965;
  visitPackedDoubleField = 966;
  visitPackedEnumField = 967;
  visitPackedFixed32Field = 968;
  visitPackedFixed64Field = 969;
  visitPackedFloatField = 970;
  visitPackedInt32Field = 971;
  visitPackedInt64Field = 972;
  visitPackedSFixed32Field = 973;
  visitPackedSFixed64Field = 974;
  visitPackedSInt32Field = 975;
  visitPackedSInt64Field = 976;
  visitPackedUInt32Field = 977;
  visitPackedUInt64Field = 978;
  visitRepeated = 979;
  visitRepeatedBoolField = 980;
  visitRepeatedBytesField = 981;
  visitRepeatedDoubleField = 982;
  visitRepeatedEnumField = 983;
  visitRepeatedFixed32Field = 984;
  visitRepeatedFixed64Field = 985;
  visitRepeatedFloatField = 986;
  visitRepeatedGroupField = 987;
  visitRepeatedInt32Field = 988;
  visitRepeatedInt64Field = 989;
  visitRepeatedMessageField = 990;
  visitRepeatedSFixed32Field = 991;
  visitRepeatedSFixed64Field = 992;
  visitRepeatedSInt32Field = 993;
  visitRepeatedSInt64Field = 994;
  visitRepeatedStringField = 995;
  visitRepeatedUInt32Field = 996;
  visitRepeatedUInt64Field = 997;
  visitSingular = 998;
  visitSingularBoolField = 999;
  visitSingularBytesField = 1000;
  visitSingularDoubleField = 1001;
  visitSingularEnumField = 1002;
  visitSingularFixed32Field = 1003;
  visitSingularFixed64Field = 1004;
  visitSingularFloatField = 1005;
  visitSingularGroupField = 1006;
  visitSingularInt32Field = 1007;
  visitSingularInt64Field = 1008;
  visitSingularMessageField = 1009;
  visitSingularSFixed32Field = 1010;
  visitSingularSFixed64Field = 1011;
  visitSingularSInt32Field = 1012;
  visitSingularSInt64Field = 1013;
  visitSingularStringField = 1014;
  visitSingularUInt32Field = 1015;
  visitSingularUInt64Field = 1016;
  visitUnknown = 1017;
  Void = 1018;
  wasDecoded = 1019;
  weak = 1020;
  weakDependency = 1021;
  where = 1022;
  wireFormat = 1023;
  with = 1024;
  withUnsafeBytes = 1025;
  withUnsafeMutableBytes = 1026;
  work = 1027;
  Wrapped = 1028;
  WrappedType = 1029;
  wrappedValue = 1030;
  written = 1031;
  yday = 1032;
}
