// Protos/unittest_swift_reserved.proto - test proto
//
// This source file is part of the Swift.org open source project
//
// Copyright (c) 2014 - 2016 Apple Inc. and the Swift project authors
// Licensed under Apache License v2.0 with Runtime Library Exception
//
// See http://swift.org/LICENSE.txt for license information
// See http://swift.org/CONTRIBUTORS.txt for the list of Swift project authors
//
// -----------------------------------------------------------------------------
///
/// Test Swift reserved words used as enum or message names
///
// -----------------------------------------------------------------------------

syntax = "proto2";

package protobuf_unittest;

message SwiftReservedTest {
    enum Enum {
        DOUBLE = 1;
        JSON = 2;
        CLASS = 3;
        _ = 4;
        SELF = 5;
        TYPE = 6;
    }

    enum Protocol { a = 1; }

    message class {
      extensions 1000 to 2000;
    }
    message Type {}
    message isEqual {}

    // static r/o properties on Message, ensure they still work as fields.
    optional int32 proto_message_name = 10;
    optional int32 proto_package_name = 11;
    optional int32 any_type_prefix = 12;
    optional int32 any_type_url = 13;

    // r/o properties on Message, ensure it gets remapped.
    optional string is_initialized = 20;
    optional string hash_value = 21;
    optional int32 debug_description = 22;
}

extend SwiftReservedTest.class {
    // Won't get _p added because it is fully qualified.
    optional bool debug_description = 1000;
}

message SwiftReservedTestExt {
    extend SwiftReservedTest.class {
        // Even though it is a raw name in the Extensions struct for the
        // Message (SwiftReservedTestExt), the generation controls what
        // that struct has to conform to, so collisions there don't matter.
        optional bool hash_value = 1001;
    }
}
